# jsk_aerial_robot

aerial_robot/: CMakeLists.txt  package.xml
aerial_robot_base/: CMakeLists.txt  package.xml  setup.py
aerial_robot_base/include/aerial_robot_base/: aerial_robot_base.h
aerial_robot_base/scripts/: keyboard_command.py  rms.py  simple_demo.py
aerial_robot_base/src/: aerial_robot_base.cpp  aerial_robot_base_node.cpp
aerial_robot_base/src/aerial_robot_base/: hovering_check.py  robot_interface.py  ros_compat.py  state_machine.py
aerial_robot_control/: CMakeLists.txt  package.xml
aerial_robot_control/include/aerial_robot_control/: flight_navigation.h
aerial_robot_control/include/aerial_robot_control/control/: under_actuated_lqi_controller.h
aerial_robot_control/include/aerial_robot_control/control/base/: base.h
aerial_robot_control/src/control/: fully_actuated_controller.cpp  under_actuated_controller.cpp  under_actuated_lqi_controller.cpp  under_actuated_tilted_lqi_controller.cpp
aerial_robot_control/src/trajectory/: test.cpp
aerial_robot_estimation/: CMakeLists.txt  package.xml
aerial_robot_estimation/include/aerial_robot_estimation/: state_estimation.h
aerial_robot_estimation/include/aerial_robot_estimation/sensor/: base_plugin.h
aerial_robot_estimation/include/aerial_robot_estimation/vision/: optical_flow.h
aerial_robot_estimation/src/kf/: baro_bias_plugin.cpp  xy_roll_pitch_bias_plugin.cpp
aerial_robot_estimation/src/sensor/: altitude.cpp  gps.cpp  imu.cpp  mocap.cpp  plane_detection.cpp  vo.cpp
aerial_robot_estimation/src/vision/: optical_flow.cpp
aerial_robot_model/: CMakeLists.txt  package.xml
aerial_robot_model/include/aerial_robot_model/: servo_bridge.h
aerial_robot_model/include/aerial_robot_model/model/: aerial_robot_model.h  aerial_robot_model_ros.h  transformable_aerial_robot_model.h
aerial_robot_model/include/aerial_robot_model/utils/: kdl_utils.h
aerial_robot_model/src/model/base_model/: robot_model.cpp  robot_model_ros.cpp
aerial_robot_model/src/model/plugin/: multirotor_robot_model.cpp  underactuated_tilted_robot_model.cpp
aerial_robot_model/src/model/transformable_model/: jacobians.cpp  kinematics.cpp  statics.cpp
aerial_robot_model/src/utils/: interactive_marker_tf_broadcaster.cpp  rotor_tf_publisher.cpp
aerial_robot_msgs/: CMakeLists.txt  package.xml
aerial_robot_msgs/msg/: FlightNav.msg  ForceList.msg
aerial_robot_nerve/motor_test/: CMakeLists.txt  package.xml
aerial_robot_nerve/motor_test/src/: motor_test.cpp
aerial_robot_nerve/spinal/: CMakeLists.txt  package.xml
aerial_robot_nerve/spinal/mcu_project/lib/Jsk_Lib/flight_control/: flight_control.h
aerial_robot_nerve/spinal/mcu_project/lib/Jsk_Lib/flight_control/attitude/: attitude_control.h
aerial_robot_nerve/spinal/mcu_project/lib/Jsk_Lib/state_estimate/attitude/: attitude_estimate.h
aerial_robot_nerve/spinal_interfaces/: CMakeLists.txt  package.xml
aerial_robot_nerve/spinal_interfaces/msg/: BoardInfo.msg  ESCTelemetryArray.msg  JointProfiles.msg  PMatrixPseudoInverseWithInertia.msg  PwmInfo.msg  RollPitchYawTerms.msg  ServoStates.msg  SimpleImu.msg
aerial_robot_nerve/spinal_interfaces/srv/: GetBoardInfo.srv
aerial_robot_nerve/stm32h7_nucleo/: CMakeLists.txt  package.xml
aerial_robot_simulation/: CMakeLists.txt  package.xml
aerial_robot_simulation/include/aerial_robot_simulation/: rotor_handle.h  simulation_attitude_controller.h  spinal_interface.h
aerial_robot_simulation/include/aerial_robot_simulation/mujoco/: mujoco_attitude_controller.h  mujoco_spinal_interface.h
aerial_robot_simulation/src/: simulation_attitude_controller.cpp
docs/ros2_migration/: CONVERSION_STATUS.md  QUICK_REFERENCE_CHECKLIST.md  ROS2_CONVERSION_GUIDE.md  ROS2_IMPLEMENTATION_GUIDE.md
robots/dragon/: CMakeLists.txt  package.xml
robots/dragon/include/dragon/control/: lqi_gimbal_control.h
robots/dragon/src/: dragon_navigation.cpp
robots/dragon/src/control/: full_vectoring_control.cpp  lqi_gimbal_control.cpp
robots/dragon/src/model/: full_vectoring_robot_model.cpp  hydrus_like_robot_model.cpp
robots/dragon/src/sensor/: imu.cpp
robots/gimbalrotor/: CMakeLists.txt  package.xml
robots/gimbalrotor/src/: gimbalrotor_navigation.cpp
robots/gimbalrotor/src/control/: gimbalrotor_controller.cpp
robots/gimbalrotor/src/model/: gimbalrotor_robot_model.cpp
robots/hydrus/: CMakeLists.txt  package.xml
robots/hydrus/src/: hydrus_lqi_controller.cpp  hydrus_robot_model.cpp  hydrus_tilted_lqi_controller.cpp  hydrus_tilted_robot_model.cpp
robots/hydrus_xi/: CMakeLists.txt  package.xml
robots/hydrus_xi/src/: hydrus_xi_fully_actuated_robot_model.cpp  hydrus_xi_under_actuated_navigation.cpp
robots/mini_quadrotor/: CMakeLists.txt  package.xml
