<?xml version="1.0"?>
<package format="3">
  <name>aerial_robot_base</name>
  <version>1.3.6</version>
  <description>The base for aerial robots</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>
  <author email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>aerial_robot_control</build_depend>
  <build_depend>aerial_robot_estimation</build_depend>
  <build_depend>aerial_robot_model</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>

  <exec_depend>aerial_robot_control</exec_depend>
  <exec_depend>aerial_robot_estimation</exec_depend>
  <exec_depend>aerial_robot_model</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>mocap_optitrack</exec_depend>
  <exec_depend>smclib</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ublox_gps</exec_depend>
  <exec_depend>ntrip_client</exec_depend>

</package>
