<?xml version="1.0"?>
<package format="3">
  <name>aerial_robot_control</name>
  <version>1.3.6</version>
  <description>The aerial_robot_control package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Moju Zhao</maintainer>

  <license>BSD</license>

  <author email="chou@jsk.imi.i.u-tokyo.ac.jp">Moju Zhao</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>aerial_robot_estimation</build_depend>
  <build_depend>aerial_robot_model</build_depend>
  <build_depend>aerial_robot_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>spinal</build_depend>
  <build_depend>tf2</build_depend>

  <exec_depend>aerial_robot_estimation</exec_depend>
  <exec_depend>aerial_robot_model</exec_depend>
  <exec_depend>aerial_robot_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>spinal</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export>
    <aerial_robot_control plugin="${prefix}/plugins/flight_control_plugins.xml" />
  </export>

</package>
