<?xml version="1.0"?>
<package format="3">
  <name>aerial_robot_estimation</name>
  <version>1.3.6</version>
  <description>The aerial_robot_estimation package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">zhao</maintainer>
  <maintainer email="anzai@jsk.imi.i.u-tokyo.ac.jp">anzai</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>aerial_robot_model</build_depend>
  <build_depend>aerial_robot_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>spinal</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>

  <exec_depend>aerial_robot_model</exec_depend>
  <exec_depend>aerial_robot_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>spinal</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

  <export>
    <kalman_filter plugin="${prefix}/plugins/kf_plugins.xml" />
    <aerial_robot_estimation plugin="${prefix}/plugins/sensor_plugins.xml" />
    <nodelet plugin="${prefix}/plugins/vision_nodelet.xml"/>
  </export>
</package>
