<?xml version="1.0"?>
<package format="3">
  <name>aerial_robot_model</name>
  <version>1.3.6</version>
  <description>The model for aerial robots</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>
  <author email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>tf2-eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>urdfdom_headers</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!-- <build_depend>spinal</build_depend> -->
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_kdl</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>aerial_robot_msgs</build_depend>


  <exec_depend>tf2-eigen</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <!-- <exec_depend>spinal</exec_depend> -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_kdl</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>aerial_robot_msgs</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <aerial_robot_model plugin="${prefix}/plugins/robot_model_plugins.xml"/>
  </export>

</package>
