<?xml version="1.0"?>
<package format="3">
  <name>aerial_robot_simulation</name>
  <version>1.3.6</version>
  <description>The aerial_robot_simulation package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">chou</maintainer>

  <license>BSD</license>

  <author>Moju Zhao</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>aerial_robot_base</build_depend>
  <build_depend>aerial_robot_estimation</build_depend>
  <build_depend>aerial_robot_msgs</build_depend>
  <build_depend>aerial_robot_model</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>urdfdom_headers</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>spinal</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>aerial_robot_base</exec_depend>
  <exec_depend>aerial_robot_estimation</exec_depend>
  <exec_depend>aerial_robot_msgs</exec_depend>
  <exec_depend>aerial_robot_model</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>spinal</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/aerial_robot_hw_sim_plugins.xml"/>
    <mujoco_ros_control plugin="${prefix}/mujoco_robot_hw_sim_plugin.xml"/>
  </export>

</package>
