<?xml version="1.0"?>
<package format="3">
  <name>stm32h7_nucleo</name>
  <version>1.3.6</version>
  <description>The stm32h7_nucleo package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>
  <author email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>micro_ros_msgs</build_depend>
  <build_depend>spinal</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>micro_ros_msgs</exec_depend>
  <exec_depend>spinal</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
